Fixattiin overflow navigaatio barista

--- a/tyylit.css
+++ b/tyylit.css
@@ -54,6 +54,7 @@ nav {
     background: #414141;
     padding: 10px 0;
     text-align: center;
+    overflow: hidden;
 }
 
 nav a {
@@ -63,12 +64,14 @@ nav a {
     display: inline-block;
     box-sizing: border-box;
     border: 1px solid #414141;
+    overflow: hidden;
 }
 
 nav a:hover {
     background:rgb(0, 0, 0);
     border: 1px solid #000;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 main {
@@ -138,6 +141,7 @@ header, nav, footer {
     width: 100%;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 footer {
@@ -230,7 +234,7 @@ nav.glowing-border {
     justify-content: space-around;
     flex-direction: row; 
     flex-wrap: nowrap; 
-    overflow-x: auto; 
+    overflow-x: hidden; 
 }
 
 nav.glowing-border a {
